--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,13 +1,13 @@
 name: Lint
 on:
   push:
-    branches:
-      - "*"
+    branches-ignore:
+      - "main"
     paths:
-    - '**/*.go'
+      - "**/*.go"
   pull_request:
     paths:
-    - '**/*.go'
+      - "**/*.go"
   workflow_call:
 
 permissions:
@@ -27,4 +27,4 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
-          version: v2.2.1
+          version: v2.6.2
