--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,13 +1,13 @@
 name: Test
 on:
   push:
-    branches:
-      - "*"
+    branches-ignore:
+      - "main"
     paths:
-    - '**/*.go'
+      - "**/*.go"
   pull_request:
     paths:
-    - '**/*.go'
+      - "**/*.go"
   workflow_call:
 
 permissions:
@@ -17,7 +17,7 @@ jobs:
   test:
     name: test
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
