--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,10 +4,10 @@ on:
     branches:
       - "*"
     paths:
-    - '**/*.go'
+      - "**/*.go"
   pull_request:
     paths:
-    - '**/*.go'
+      - "**/*.go"
   workflow_call:
 
 permissions:
@@ -17,7 +17,7 @@ jobs:
   build:
     name: build
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v5
 
@@ -27,4 +27,4 @@ jobs:
 
       - name: Compile
         run: |
-          make build
+          make
